samples/_failures_safe/1761406614_69842d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77f24cd7.c: In function ‘main’:
./samples/SAFE/__tmp_77f24cd7.c:171:5: error: expected declaration or statement at end of input
  171 |     }
      |     ^
